fix swagger (#5)
* update lib

* fix swagger
