# internal/api/xxxxxs/models/get_xxxxx_by_id.go
@@ -1,13 +1,5 @@
 package models
 
-import "github.com/jindasoft/jinda-platforms/xres"
-
-type SwaggerGetXxxxxByIDResponse struct {
-	xres.SuccessResponse
-
-	Data GetXxxxxByIDResponse `json:"data"`
-}
-
 type GetXxxxxByIDResponse struct {
 	ID   string `json:"id"`
 	Code string `json:"code"`
